[project]
name = "khapi"
version = "0.6.0"
authors = [{ name="khfix", email="hamza.alkhatib.se@gmail.com" }]
description = "A powerful Django app for creating APIs."
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/khfix/django-khapi"
Issues = "https://github.com/khfix/django-khapi/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
